          _   _  __  __  _      ____        __        __ _____  _   _ 
         | | | ||  \/  || |    |___ \   ___ \ \      / /|  ___|| \ | |
         | | | || |\/| || |      __) | / _ \ \ \ /\ / / | |_   |  \| |
         | |_| || |  | || |___  / __/ | (_) | \ V  V /  |  _|  | |\  |
          \___/ |_|  |_||_____||_____| \___/   \_/\_/   |_|    |_| \_|
                 http://www.service-technology.org/uml2owfn/


Version 1.11-unreleased
=======================

* Changed the standard soundness verification procedures to the more efficient
  liveness property verification algorithm of LoLA. To use the old CTL model
  checking procedures use parameter `-p ctl'.

* Cleaned the autotools configuration files and added options to directly
  compile binaries for different platforms.

\nSee file ChangeLog <http://service-technology.org/files/uml2owfn/ChangeLog> for\ncomplete version history.\n